welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:4: error: value peindre is not a member of Unit
                                    avance                  peindre()
                                                            ^Array2:27: error: not found: value A
    setCouleurBrosse(A)
                     ^